--- a/frontend/RecipeFriends/Pages/FetchData.razor
+++ b/frontend/RecipeFriends/Pages/FetchData.razor
@@ -1,5 +1,10 @@
 ﻿@page "/fetchdata"
+
+@using RecipeFriends.Services
+
 @inject HttpClient Http
+@inject IRecipeService RecipeService
+
 
 <PageTitle>Weather forecast</PageTitle>
 
@@ -7,7 +12,7 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
-@if (forecasts == null)
+@if (recipes == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -16,20 +21,17 @@ else
     <table class="table">
         <thead>
             <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
+                <th>Title</th>
+                <th>Catagory</th>
+
             </tr>
         </thead>
         <tbody>
-            @foreach (var forecast in forecasts)
+            @foreach (var recipe in recipes)
             {
                 <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
+                    <td>@recipe.Title</td>
+                    <td>@recipe.Catagory</td>
                 </tr>
             }
         </tbody>
@@ -37,21 +39,10 @@ else
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+    private RecipeInfo[]? recipes;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
-    }
-
-    public class WeatherForecast
-    {
-        public DateOnly Date { get; set; }
-
-        public int TemperatureC { get; set; }
-
-        public string? Summary { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+        recipes = await RecipeService.GetRecipesAsync(CancellationToken.None);
     }
 }
