--- a/frontend/RecipeFriends/Pages/FetchData.razor
+++ b/frontend/RecipeFriends/Pages/FetchData.razor
@@ -1,16 +1,14 @@
-﻿@page "/fetchdata"
+﻿@page "/recipe/list"
 
 @using RecipeFriends.Services
 
-@inject HttpClient Http
+@inject NavigationManager NavigationManager
 @inject IRecipeService RecipeService
 
 
-<PageTitle>Weather forecast</PageTitle>
+<PageTitle>Recipes</PageTitle>
 
-<h1>Weather forecast</h1>
-
-<p>This component demonstrates fetching data from the server.</p>
+<h1>Recipes</h1>
 
 @if (recipes == null)
 {
@@ -23,7 +21,7 @@ else
             <tr>
                 <th>Title</th>
                 <th>Catagory</th>
-
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -32,6 +30,9 @@ else
                 <tr>
                     <td>@recipe.Title</td>
                     <td>@recipe.Catagory</td>
+                    <td>
+                        <button @onclick="() => GoToEditPage(recipe.Id)">Edit</button>  
+                    </td>
                 </tr>
             }
         </tbody>
@@ -44,5 +45,10 @@ else
     protected override async Task OnInitializedAsync()
     {
         recipes = await RecipeService.GetRecipesAsync(CancellationToken.None);
+    }
+
+    private void GoToEditPage(int id)
+    {
+        NavigationManager.NavigateTo($"/recipe/edit/{id}");  
     }
 }
