--- a/frontend/RecipeFriends/Pages/RecipeEdit.razor
+++ b/frontend/RecipeFriends/Pages/RecipeEdit.razor
@@ -4,8 +4,6 @@
 @inject IRecipeService RecipeService
 @inject NavigationManager NavigationManager
 
-<h1>Edit Recipe</h1>
-
 @if (recipeDetails == null)
 {
     <p><em>Loading...</em></p>
@@ -13,36 +11,66 @@
 else
 {
     <EditForm Model="recipeDetails" OnValidSubmit="HandleValidSubmit">
+        <h3>Edit Recipe</h3>
         <DataAnnotationsValidator />
         <ValidationSummary />
-        <div class="form-row">
-            <div class="form-group col-md-12">
-                <InputText id="title" @bind-Value="recipeDetails.Title" />
+        <hr />
+        <div class="form-group row custom-row-spacing">
+            <label for="title" class="col-sm-2 col-form-label">
+                Title
+            </label>
+            <div class="col-sm-10">
+                <InputText id="title" class="form-control" @bind-Value="recipeDetails.Title" />
             </div>
-            <div class="form-group col-md-12">
-                <InputSelect id="catagory" TValue="Catagories" @bind-Value="recipeDetails.Catagory">
+        </div>
+        <div class="form-group row custom-row-spacing">
+            <label for="catagory" class="col-sm-2 col-form-label">
+                Categorie
+            </label>
+            <div class="col-sm-10">
+                <InputSelect id="catagory" class="form-control" TValue="Catagories" @bind-Value="recipeDetails.Catagory">
                     @foreach (var cat in Enum.GetValues<Catagories>())
                     {
                         <option value="@cat">@cat</option>
                     }
                 </InputSelect>
             </div>
-            <div class="form-group col-md-12">
-                <InputText id="shortDescription" @bind-Value="recipeDetails.ShortDescription" />
+        </div>
+        <div class="form-group row custom-row-spacing">
+            <div class="col-md-2">
+                <label for="shortDescription" class="d-inline-block float-md-right col-form-label">
+                    Short description
+                </label>
             </div>
-            <div class="form-group col-md-12">
-                <InputTextArea id="description" @bind-Value="recipeDetails.Description" />
+            <div class="col-md-10">
+                <InputText id="shortDescription" class="form-control" @bind-Value="recipeDetails.ShortDescription" />
             </div>
-            <div class="form-group col-md-12">
-                <InputTextArea id="directions" @bind-Value="recipeDetails.Directions" />
+        </div>
+        <div class="form-group row custom-row-spacing">
+            <label for="description" class="col-sm-2 col-form-label">
+                Description
+            </label>
+            <div class="col-sm-10">
+                <InputTextArea id="description" class="form-control" @bind-Value="recipeDetails.Description" />
             </div>
-            @*<InputText id="preparationTime" @bind-Value="recipeDetails.PreparationTime" />
-                <InputText id="cookingTime" @bind-Value="recipeDetails.CookingTime" />*@
-            <!-- For Tags, you can use some other UI element like checkbox list, multi-select etc -->
-            <div class="form-group col-md-12">
+        </div>
+        <div class="form-group row custom-row-spacing">
+            <label for="directions" class="col-sm-2 col-form-label">
+                Directions
+            </label>
+            <div class="col-sm-10 directions-textarea">
+                <InputTextArea id="directions" class="form-control " style="height: 100%" @bind-Value="recipeDetails.Directions" />
+            </div>
+        </div>
+        @*<InputText id="preparationTime" @bind-Value="recipeDetails.PreparationTime" />
+            <InputText id="cookingTime" @bind-Value="recipeDetails.CookingTime" />*@
+        <!-- For Tags, you can use some other UI element like checkbox list, multi-select etc -->
+        <div class="form-group row">
+            <div class="col-sm-12">
                 <button type="submit">Update</button>
             </div>
         </div>
+
     </EditForm>
 
     @if (!string.IsNullOrEmpty(saveStatusMessage))
