--- a/mauiblazor/RecipeFriends/_Imports.razor
+++ b/mauiblazor/RecipeFriends/_Imports.razor
@@ -6,4 +6,4 @@
 @using Microsoft.JSInterop
 @using RecipeFriends
 @using RecipeFriends.Shared
-@using RecipeFriends.Shared.DTO.v1
+@using RecipeFriends.Shared.DTO
