--- a/frontend/RecipeFriends/Pages/RecipeEdit.razor
+++ b/frontend/RecipeFriends/Pages/RecipeEdit.razor
@@ -1,5 +1,5 @@
 ﻿@page "/recipe/edit/{Id:int}"
-@using RecipeFriends.Shared.DTO.v1
+@using RecipeFriends.Shared.DTO
 @using RecipeFriends.Services
 @inject IRecipeService RecipeService
 @inject NavigationManager NavigationManager
