--- a/frontend/RecipeFriends/_Imports.razor
+++ b/frontend/RecipeFriends/_Imports.razor
@@ -8,6 +8,6 @@
 @using Microsoft.JSInterop
 @using RecipeFriends
 @using RecipeFriends.Shared
-@using RecipeFriends.Shared.DTO.v1
+@using RecipeFriends.Shared.DTO
 
 
