Small layout change and cancel

--- a/mauiblazor/RecipeFriends/Pages/RecipeEdit.razor.css
+++ b/mauiblazor/RecipeFriends/Pages/RecipeEdit.razor.css
@@ -1,6 +1,15 @@
-﻿.directions-textarea {
+﻿.shortDescription-textarea {
+    height: 100px;
+}
+
+.description-textarea {
     height: 200px;
 }
+
+.directions-textarea {
+    height: 200px;
+}
+
 .custom-row-spacing {
     margin-bottom: 20px;
 }
