--- a/mauiblazor/RecipeFriends/Pages/RecipeEdit.razor
+++ b/mauiblazor/RecipeFriends/Pages/RecipeEdit.razor
@@ -38,21 +38,21 @@ else
             </div>
         </div>
         <div class="form-group row custom-row-spacing">
-            <div class="col-md-2">
-                <label for="shortDescription" class="d-inline-block float-md-right col-form-label">
+            <div class="col-sm-2">
+                <label for="shortDescription" class="d-inline-block float-sm-right col-form-label">
                     Short description
                 </label>
             </div>
-            <div class="col-md-10">
-                <InputText id="shortDescription" class="form-control" @bind-Value="recipeDetails.ShortDescription" />
+            <div class="col-sm-10 shortDescription-textarea">
+                <InputTextArea id="shortDescription" class="form-control" style="height: 100%" @bind-Value="recipeDetails.ShortDescription" />
             </div>
         </div>
         <div class="form-group row custom-row-spacing">
             <label for="description" class="col-sm-2 col-form-label">
                 Description
             </label>
-            <div class="col-sm-10">
-                <InputTextArea id="description" class="form-control" @bind-Value="recipeDetails.Description" />
+            <div class="col-sm-10 description-textarea">
+                <InputTextArea id="description" class="form-control" style="height: 100%" @bind-Value="recipeDetails.Description" />
             </div>
         </div>
         <div class="form-group row custom-row-spacing">
@@ -68,8 +68,10 @@ else
         <!-- For Tags, you can use some other UI element like checkbox list, multi-select etc -->
         <div class="form-group row">
             <div class="col-sm-12">
-                <button type="submit">Update</button>
+                <button type="submit" class="btn btn-primary">Update</button>
+                <button type="button" class="btn btn-secondary" @onclick="Cancel">Cancel</button>
             </div>
+            
         </div>
 
     </EditForm>
@@ -112,5 +114,10 @@ else
                 saveStatusMessage = "Failed to save.";
             }
         }
+    }
+
+    private void Cancel()
+    {
+        NavigationManager.NavigateTo("/recipe/list");
     }
 }
