--- a/mauiblazor/RecipeFriends/_Imports.razor
+++ b/mauiblazor/RecipeFriends/_Imports.razor
@@ -7,3 +7,5 @@
 @using RecipeFriends
 @using RecipeFriends.Shared
 @using RecipeFriends.Shared.DTO
+@using PSC.Blazor.Components.MarkdownEditor 
+@using PSC.Blazor.Components.MarkdownEditor.EventsArgs
