--- a/mauiblazor/RecipeFriends/Pages/RecipeEdit.razor
+++ b/mauiblazor/RecipeFriends/Pages/RecipeEdit.razor
@@ -44,7 +44,10 @@ else
                 </label>
             </div>
             <div class="col-sm-10 shortDescription-textarea">
-                <InputTextArea id="shortDescription" class="form-control" style="height: 100%" @bind-Value="recipeDetails.ShortDescription" />
+                @* <InputTextArea id="shortDescription" class="form-control" style="height: 100%" @bind-Value="recipeDetails.ShortDescription" /> *@
+                <div class="markdown-editor-wrapper">
+                    <MarkdownEditor @bind-Value="@recipeDetails.ShortDescription" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide", "table" })'/>
+                </div>
             </div>
         </div>
         <div class="form-group row custom-row-spacing">
@@ -52,7 +55,8 @@ else
                 Description
             </label>
             <div class="col-sm-10 description-textarea">
-                <InputTextArea id="description" class="form-control" style="height: 100%" @bind-Value="recipeDetails.Description" />
+                @* <InputTextArea id="description" class="form-control" style="height: 100%" @bind-Value="recipeDetails.Description" /> *@
+                <MarkdownEditor @bind-Value="@recipeDetails.Description" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>
             </div>
         </div>
         <div class="form-group row custom-row-spacing">
@@ -60,9 +64,10 @@ else
                 Directions
             </label>
             <div class="col-sm-10 directions-textarea">
-                <InputTextArea id="directions" class="form-control " style="height: 100%" @bind-Value="recipeDetails.Directions" />
+                <MarkdownEditor @bind-Value="@recipeDetails.Directions" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>
             </div>
         </div>
+
         @*<InputText id="preparationTime" @bind-Value="recipeDetails.PreparationTime" />
             <InputText id="cookingTime" @bind-Value="recipeDetails.CookingTime" />*@
         <!-- For Tags, you can use some other UI element like checkbox list, multi-select etc -->
@@ -82,19 +87,32 @@ else
             @saveStatusMessage
         </div>
     }
-
 }
 
 @code {
     [Parameter] public int Id { get; set; }
 
     private RecipeDetails? recipeDetails;
+
     private string saveStatusMessage = string.Empty;
 
     protected override async Task OnInitializedAsync()
     {
         recipeDetails = await RecipeService.GetRecipeDetailsAsync(Id, CancellationToken.None);
     }
+
+        @* string markdownValue = "#Markdown Editor\nThis is a test";
+    string markdownHtml;
+
+    Task OnMarkdownValueChanged(string value)
+    {
+        return Task.CompletedTask;
+    }
+    Task OnMarkdownValueHTMLChanged(string value)
+    {
+        markdownHtml = value;
+        return Task.CompletedTask;
+    } *@
 
     private async Task HandleValidSubmit()
     {
