--- a/mauiblazor/RecipeFriends/_Imports.razor
+++ b/mauiblazor/RecipeFriends/_Imports.razor
@@ -7,5 +7,7 @@
 @using RecipeFriends
 @using RecipeFriends.Shared
 @using RecipeFriends.Shared.DTO
+@using Blazored.Modal
+@using Blazored.Modal.Services
 @using PSC.Blazor.Components.MarkdownEditor 
 @using PSC.Blazor.Components.MarkdownEditor.EventsArgs
