--- a/mauiblazor/RecipeFriends/Pages/RecipeList.razor
+++ b/mauiblazor/RecipeFriends/Pages/RecipeList.razor
@@ -3,6 +3,7 @@
 @using RecipeFriends.Services
 @using RecipeFriends.Shared.DTO
 
+
 @inject NavigationManager NavigationManager
 @inject IRecipeService RecipeService
 @inject IDocumentService DocumentService
@@ -38,6 +39,7 @@ else
                 <th>Catagory</th>
                 <th>Action1</th>
                 <th>Action2</th>
+                <th>Action3</th>
             </tr>
         </thead>
         <tbody>
@@ -50,6 +52,9 @@ else
                         <button @onclick="() => GoToEditPage(recipe.Id)">Edit</button>                          
                     </td>
                     <td>                        
+                        <button @onclick="() => ViewRecipe(recipe.Id)">View</button>  
+                    </td>
+                    <td>                        
                         <button @onclick="() => DownloadRecipe(recipe.Id)">Download</button>  
                     </td>
                 </tr>
@@ -59,6 +64,7 @@ else
 }
 
 @code {
+    [CascadingParameter] public IModalService Modal { get; set; } = default!;
     private RecipeFriends.Shared.DTO.RecipeInfo[]? recipes;
 
     protected override async Task OnInitializedAsync()
@@ -70,6 +76,17 @@ else
     {
         NavigationManager.NavigateTo($"/recipe/edit/{id}");  
     }
+
+    private void ViewRecipe(int id)
+    { 
+        var recipe = recipes.Where<RecipeInfo>(x => x.Id == id).First<RecipeInfo>();
+        var parameters = new ModalParameters().Add(nameof(RecipeView.Id), recipe.Id);        
+        var options = new ModalOptions() { 
+                                Size = ModalSize.Large 
+                            };
+        Modal.Show<RecipeView>("", parameters, options);
+    }
+
     private async void DownloadRecipe(int id){
         var pdf = await DocumentService.RecipeToPDFAsync(id, CancellationToken.None);
 
