--- a/mauiblazor/RecipeFriends/_Imports.razor
+++ b/mauiblazor/RecipeFriends/_Imports.razor
@@ -7,7 +7,6 @@
 @using RecipeFriends
 @using RecipeFriends.Shared
 @using RecipeFriends.Shared.DTO
-@using Blazored.Modal
-@using Blazored.Modal.Services
+@using MudBlazor
 @using PSC.Blazor.Components.MarkdownEditor 
 @using PSC.Blazor.Components.MarkdownEditor.EventsArgs
