--- a/mauiblazor/RecipeFriends/Main.razor
+++ b/mauiblazor/RecipeFriends/Main.razor
@@ -1,4 +1,6 @@
-﻿<Router AppAssembly="@typeof(Main).Assembly">
+﻿@using RecipeFriends.Components.Layout;
+
+<Router AppAssembly="@typeof(Main).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
