--- a/mauiblazor/RecipeFriends/Components/Pages/RecipeEdit.razor
+++ b/mauiblazor/RecipeFriends/Components/Pages/RecipeEdit.razor
@@ -1,5 +1,6 @@
 ﻿@page "/recipe/edit/{Id:int}"
 @using RecipeFriends.Shared.DTO
+@using RecipeFriends.Components.Tag
 @using RecipeFriends.Data
 @using RecipeFriends.Services
 
@@ -7,8 +8,11 @@
 @inject NavigationManager NavigationManager
 
 <MudDialog>
-    <DialogContent >
-        
+        <TitleContent>
+        <MudText Typo="Typo.subtitle1">Edit Recipe</MudText>
+    </TitleContent>
+    <DialogContent>
+        <MudContainer Style="max-height: 300px; overflow-y: scroll">
     @if (recipeDetails == null)
     {
         <p><em>Loading...</em></p>
@@ -16,85 +20,71 @@
     else
     {
         <EditForm Model="@recipeDetails" OnValidSubmit="HandleValidSubmit">
-        <h3>Edit Recipe</h3>
-        <DataAnnotationsValidator />
-        <ValidationSummary />
-        <hr />
-        <div class="form-group row custom-row-spacing">
-            <label for="title" class="col-sm-2 col-form-label">
-                Title
-            </label>
-            <div class="col-sm-10">
-                <InputText id="title" class="form-control" @bind-Value="recipeDetails.Title" />
-            </div>
-        </div>
-        <div class="form-group row custom-row-spacing">
-            <label for="catagory" class="col-sm-2 col-form-label">
-                Categorie
-            </label>
-            <div class="col-sm-10">
-                <InputSelect id="catagory" class="form-control" TValue="Shared.Catagories" @bind-Value="recipeDetails.Catagory">
-                    @foreach (var cat in Enum.GetValues<Shared.Catagories>())
-                    {
-                        <option value="@cat">@cat</option>
-                    }
-                </InputSelect>
-            </div>
-        </div>
-        <div class="form-group row custom-row-spacing">
-            <div class="col-sm-2">
-                <label for="shortDescription" class="d-inline-block float-sm-right col-form-label">
-                    Short description
-                </label>
-            </div>
-            <div class="col-sm-10 shortDescription-textarea">
-                @* <InputTextArea id="shortDescription" class="form-control" style="height: 100%" @bind-Value="recipeDetails.ShortDescription" /> *@
-                <div class="markdown-editor-wrapper">
-                    <MarkdownEditor @bind-Value="@recipeDetails.ShortDescription" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide", "table" })'/>
-                </div>
-            </div>
-        </div>
-        <div class="form-group row custom-row-spacing">
-            <label for="description" class="col-sm-2 col-form-label">
-                Description
-            </label>
-            <div class="col-sm-10 description-textarea">
-                @* <InputTextArea id="description" class="form-control" style="height: 100%" @bind-Value="recipeDetails.Description" /> *@
-                <MarkdownEditor @bind-Value="@recipeDetails.Description" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>
-            </div>
-        </div>
-        <div class="form-group row custom-row-spacing">
-            <label for="directions" class="col-sm-2 col-form-label">
-                Directions
-            </label>
-            <div class="col-sm-10 directions-textarea">
-                <MarkdownEditor @bind-Value="@recipeDetails.Directions" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>
-            </div>
-        </div>
-   
+            
+            <DataAnnotationsValidator />
+            <ValidationSummary />
 
-        @if (!string.IsNullOrEmpty(saveStatusMessage))
-        {
-            <div class="alert alert-info">
-                @saveStatusMessage
-            </div>
-        }
+
+            <MudGrid Spacing="2" Justify="Justify.Center" >
+                <MudItem xs="12">
+                    <MudPaper Height="120px" xs="12" Class="pa-4">             
+                        <div class="d-flex flex-column py-1">
+                            <InputText id="title" xs="8" @bind-Value="recipeDetails.Title" />                      
+                            <InputSelect id="catagory"  xs="4" TValue="Shared.Catagories" @bind-Value="recipeDetails.Catagory">
+                                @foreach (var cat in Enum.GetValues<Shared.Catagories>())
+                                {
+                                    <option value="@cat">@cat</option>
+                                }
+                            </InputSelect>                                               
+                        </div>
+                    </MudPaper>
+                </MudItem>
+                <MudItem xs="12">
+                    <MudPaper Height="204px" xs="12">
+                        <EditTag AllTags="@allTags" RecipeTags="recipeDetails.Tags"></EditTag>                        
+                    </MudPaper>
+                </MudItem>
+                <MudItem xs="12">
+                    <MudPaper Height="204px" xs="12">
+                        <MarkdownEditor MaxHeight="100px" @bind-Value="@recipeDetails.ShortDescription" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide", "table" })'/>                        
+                    </MudPaper>
+                </MudItem>
+                <MudItem xs="12">
+                    <MudPaper Height="329px" xs="12">                        
+                        <MarkdownEditor MaxHeight="225px" @bind-Value="@recipeDetails.Description" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>                        
+                    </MudPaper>
+                </MudItem>
+                <MudItem xs="12">
+                    <MudPaper Height="329px" xs="12">                       
+                        <MarkdownEditor MaxHeight="225px" @bind-Value="@recipeDetails.Directions" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>                       
+                    </MudPaper>
+                </MudItem>   
+            </MudGrid>          
+
+ 
+        
         </EditForm>
+                   @if (!string.IsNullOrEmpty(saveStatusMessage))
+            {
+                <div class="alert alert-info">
+                    @saveStatusMessage
+                </div>
+            }
     }
+    </MudContainer>
     </DialogContent>
 
     <DialogActions>
-        <MudButton Color="Color.Secondary" OnClick="() => HandleValidSubmit()">Update</MudButton>
-        <MudButton Color="Color.Primary" OnClick="() => Cancel()">Cancel</MudButton>
-    </DialogActions>
-    
+        <MudButton OnClick="() => Cancel()">Cancel</MudButton>
+        <MudButton Color="Color.Primary" OnClick="() => HandleValidSubmit()">Update</MudButton>       
+    </DialogActions>    
 </MudDialog>
-
 
 @code {
     [Parameter] public int Id { get; set; }
 
     private RecipeDetails? recipeDetails;
+    private List<TagInfo> allTags;
 
     private string saveStatusMessage = string.Empty;
 
@@ -105,6 +95,8 @@
         }else{
             recipeDetails = new(){Title ="", ShortDescription ="", Description = "", Directions = "", Catagory = Catagories.MainCourse, PreparationTime = TimeOnly.MinValue, CookingTime = TimeOnly.MinValue };
         }
+        var t = await RecipeService.GetTagsAsync(CancellationToken.None);
+        allTags = t.ToList();
     }
 
         @* string markdownValue = "#Markdown Editor\nThis is a test";
